update files && kinda working

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,8 +1,12 @@
-MYSQL_HOST=https://tbillon.42.fr
-MYSQL_ROOT_PWD=mysql_root_pwd
-WP_DB_NAME=wp_db
-WP_DB_USR=wp_usr
-WP_DB_PWD=wp_pwd123456
-WP_ADMIN_USR=wp_adm
-WP_ADMIN_PWD=wp_adm_pwd
-WP_AMIN_MAIL=tbillon@student.42lyon.fr
+DB_NAME=DB
+DB_USER=tbillon
+DB_PASSWORD=876543
+DB_HOST=mariadb
+DB_ROOT_PASSWORD=123456
+
+WP_URL=tbillon.42.fr
+WP_ADMIN=tbillon
+WP_ADMIN_PASSWORD=tbillon_1
+WP_ADMIN_EMAIL=tbillon@student.42lyon.fr
+WP_REG_USER=user
+WP_REG_USER_PASSWORD=user_1
