--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,39 +1,14 @@
-# **************************************************************************** #
-#                                                                              #
-#                                                         :::      ::::::::    #
-#    Dockerfile                                         :+:      :+:    :+:    #
-#                                                     +:+ +:+         +:+      #
-#    By: tbillon <tbillon@student.42.fr>            +#+  +:+       +#+         #
-#                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2021/10/08 11:50:22 by tanguy            #+#    #+#              #
-#    Updated: 2022/03/03 16:57:39 by tbillon          ###   ########.fr        #
-#                                                                              #
-# **************************************************************************** #
 
-FROM    debian:buster
-LABEL   maintainer="tbillon"
+FROM debian:buster
 
-#update
-RUN apt-get update -y
+# updating packages
+RUN apt-get update
 
-#install mariadb
-RUN apt-get install -y mariadb-server mariadb-client
+# software installation
+RUN apt-get install -y mariadb-server
 
-RUN sed -i 's/bind-address/bind-address = 0.0.0 #/i' /etc/mysql/mariadb.conf.d/50-server.cnf
+# copying mysql client commands
+COPY /conf/db.sql /etc/mysql/
+COPY /tools/setup.sh /
 
-#copy conf file
-COPY conf/myconf.sql /tmp/
-
-#include args
-ARG MYSQL_ROOT_PWD
-ARG WP_DB_NAME
-ARG WP_DB_USR
-ARG WP_DB_PWD
-
-RUN sed -i 's/MYSQL_ROOT_PWD/'"${MYSQL_ROOT_PWD}"'/i' /tmp/myconf.sql \
-    && sed -i 's/WP_DB_NAME/'"${WP_DB_NAME}"'/i' /tmp/myconf.sql \
-    && sed -i 's/WP_DB_USR/'"${WP_DB_USR}"'/i' /tmp/myconf.sql \
-    && sed -i 's/WP_DB_PWD/'"${WP_DB_PWD}"'/i' /tmp/myconf.sql
-
-RUN /etc/init.d/mysql start && mysql -u root --password="root" -e "source /tmp/myconf.sql"
-CMD mysql_safe
+CMD bash setup.sh
