--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,25 +1,27 @@
-server{
+ server {
+		listen 443 ssl ;
+		listen [::]:443 ssl ;
+		server_name tbillon.42.fr;
 
-	listen 443 ssl;
-	listen [::]:443 ssl;
-	
-	server_name tbillon;
-	
-	ssl_certificate /etc/nginx/ssl/tbillon.crt;
-	ssl_certificate_key /etc/nginx/ssl/tbillon.key;
-	ssl_protocols TLSv1.2 TLSv1.3;
+		ssl on;
+		ssl_certificate /etc/nginx/ssl/certs/tbillon.crt;
+		ssl_certificate_key /etc/nginx/ssl/private/tbillon.key;
 
-	root /var/www/mywebsite; # specifiy the decirectory where nginx is gonna search from
-	index index.html index.php;
+        ssl_protocols TLSv1.2 TLSv1.3;
 
-	location / {
-		autoindex on;
-		try_files $uri $uri/ =404;
-	}
+		root /var/www/html/wordpress;
+		index index.html index.php index.htm; 
 
-	location ~ ^/.+\.php(/|$) {
-		fastcgi_pass wordpress:9000;
-		include fastcgi_param;
-		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-	}
+	location / { 
+			root /var/www/html/wordpress;
+			autoindex on; 
+			try_files $uri $uri/ =404; 
+		} 
+		
+	location ~ \.php$ {
+			
+			include snippets/fastcgi-php.conf;
+			fastcgi_pass wordpress:9000;
+		} 
+			
 }
