--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,47 +1,32 @@
-# **************************************************************************** #
-#                                                                              #
-#                                                         :::      ::::::::    #
-#    Dockerfile                                         :+:      :+:    :+:    #
-#                                                     +:+ +:+         +:+      #
-#    By: tbillon <tbillon@student.42.fr>            +#+  +:+       +#+         #
-#                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2021/10/05 10:29:24 by tanguy            #+#    #+#              #
-#    Updated: 2022/03/03 16:57:54 by tbillon          ###   ########.fr        #
-#                                                                              #
-# **************************************************************************** #
+FROM	debian:buster
 
-FROM    debian:buster
-LABEL   maintainer="tbillon"
+RUN 	apt-get update -y && apt-get upgrade -y
 
-#Update
-RUN apt-get -y update
+RUN 	apt-get install -y	\
+		nginx				\
+		vim					\
+		openssl				\
+		wget				
 
-#Install nginx
-RUN apt-get -y install nginx
+RUN 	rm -rf ./etc/nginx/sites-available/default
+RUN 	rm -rf ./etc/nginx/sites-enabled/default
+COPY 	/conf/nginx.conf ./etc/nginx/sites-available
+RUN 	ln -s /etc/nginx/sites-available/nginx.conf /etc/nginx/sites-enabled/nginx.conf
 
-#Install openssl
-RUN apt-get install openssl
 
-#Ports
-EXPOSE		443
+# Создание папок для хранения ключей и сертификатов
+RUN		mkdir /etc/nginx/ssl
+RUN		mkdir /etc/nginx/ssl/certs
+RUN		mkdir /etc/nginx/ssl/private
 
-#Open access Rights
-# RUN     chown -R www-data /var/www/*
-# RUN     chmod -R 755 /var/www/*
+# Выпуск сертификатов
+RUN		openssl req -x509 -nodes -days 365 -newkey rsa:2048		\
+		-keyout /etc/nginx/ssl/private/tbillon.key 				\
+		-out /etc/nginx/ssl/certs/tbillon.crt					\
+		-subj "/C=FR/ST=Lyon/L=Lyon/O=42/OU=tbillon/CN=tbillon.42.fr"
 
-#Generate keys and self signed SSL Certificates
-RUN mkdir /etc/nginx/ssl
-RUN openssl req -newkey rsa:4096 \
-    -x509 \
-    -sha256 \
-    -days 365 \
-    -nodes \
-    -out /etc/nginx/ssl/tbillon.crt \
-    -keyout /etc/nginx/ssl/tbillon.key \
-    -subj "/C=FR/ST=Lyon/L=Lyon/O=42 School/OU=tbillon/CN=tbillon"
+RUN		chmod -R 755 /etc/nginx/ssl/*
 
-RUN mkdir -p /run/nginx
-COPY conf/nginx.conf /etc/nginx/conf.d/default.conf
+EXPOSE	443
 
-#Start server
-ENTRYPOINT [ "nginx", "-g", "daemon off;" ]
+CMD		["nginx","-g", "daemon off;"]
