--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -14,17 +14,18 @@ COPY 	/conf/nginx.conf ./etc/nginx/sites-available
 RUN 	ln -s /etc/nginx/sites-available/nginx.conf /etc/nginx/sites-enabled/nginx.conf
 
 
-# Создание папок для хранения ключей и сертификатов
+#Create folders for ssl keys 
 RUN		mkdir /etc/nginx/ssl
 RUN		mkdir /etc/nginx/ssl/certs
 RUN		mkdir /etc/nginx/ssl/private
 
-# Выпуск сертификатов
+#Generate ssl certificates
 RUN		openssl req -x509 -nodes -days 365 -newkey rsa:2048		\
 		-keyout /etc/nginx/ssl/private/tbillon.key 				\
 		-out /etc/nginx/ssl/certs/tbillon.crt					\
 		-subj "/C=FR/ST=Lyon/L=Lyon/O=42/OU=tbillon/CN=tbillon.42.fr"
 
+#Open rights
 RUN		chmod -R 755 /etc/nginx/ssl/*
 
 EXPOSE	443
