--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -7,14 +7,14 @@ volumes:
     driver_opts:
       type: none
       o: bind 
-      device: /home/tbillon/data/wp
+      device: /home/tbillon/data/wp_data
       
   db_data:
     driver: local
     driver_opts:
       type: none
       o: bind 
-      device: /home/tbillon/data/db
+      device: /home/tbillon/data/db_data
 
 networks:
   inception:
