--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -5,7 +5,7 @@ FROM debian:buster
 RUN apt-get update
 
 #Install mariadb 
-RUN apt-get install -y mariadb-server mariadb-client
+RUN DEBIAN_FRONTEND=noninteractive apt-get install -y mariadb-server mariadb-client apt-utils
 
 #Copy configuration files
 COPY /conf/db.sql /etc/mysql/
