--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,4 +1,4 @@
- server {
+server {
 		listen 443 ssl ;
 		listen [::]:443 ssl ;
 		server_name tbillon.42.fr;
@@ -11,17 +11,15 @@
 
 		root /var/www/html/wordpress;
 		index index.html index.php index.htm; 
-
-	location / { 
-			root /var/www/html/wordpress;
-			autoindex on; 
-			try_files $uri $uri/ =404; 
-		} 
 		
 	location ~ \.php$ {
 			
-			include snippets/fastcgi-php.conf;
+			try_files $uri =404;
 			fastcgi_pass wordpress:9000;
+			fastcgi_index index.php;
+			include fastcgi_params;
+			fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+			fastcgi_param PATH_INFO $fastcgi_path_info;
 		} 
 			
 }
